# claude-agent-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/foundation/: sync-cli-vision.md  vision.md
docs/plan/: 00-overview.md  01-phase-0-scaffold.md  02-phase-1-errors.md  03-phase-2-messages.md  04-phase-3-options.md  05-phase-4-transport.md  06-phase-5-control-protocol.md  07-phase-6-query.md  08-phase-7-client.md  09-phase-8-permissions-hooks.md  10-phase-9-mcp-tools.md  11-phase-10-release.md  DEVIATIONS.md  SMOKE-RESULTS.md  UPSTREAM-PIN.md  appendix-a-wire-protocol.md
docs/sync/: PARITY.md  parity.yaml
examples/: mcp_calculator.rs  quick_start.rs  reference_wrapper.rs  streaming_client.rs  tools_and_hooks.rs
scripts/: fetch-reference.sh  render-parity.sh
src/: callback_adapters.rs  client.rs  error.rs  lib.rs  mcp_server.rs  protocol.rs  query.rs  session_management.rs  transport.rs  types.rs
src/protocol/: control.rs  query.rs
src/session_management/: disk.rs  iso8601.rs  paths.rs  store.rs  summary.rs  unicode_sanitize.rs
src/transport/: subprocess.rs
src/types/: hook.rs  mcp.rs  message.rs  options.rs  permission.rs  session_store.rs
tests/: callbacks_test.rs  client_test.rs  fake_cli.rs  mcp_test.rs  query_test.rs  transport_test.rs
tests/fixtures/: assistant_full_fields.json  assistant_server_tool_result.json  assistant_server_tool_use.json  assistant_text.json  assistant_thinking.json  assistant_tool_use.json  hook_started.json  rate_limit_event.json  result_full.json  result_minimal.json  result_success.json  stream_event.json  system_init.json  task_notification.json  task_progress.json  task_started.json  task_updated_terminal.json  user_blocks.json  user_text.json  user_with_uuid.json
